<resources>
    <string name="app_name">Table Manager</string>
    <string name="hello_placeholder_string">Hello</string>
    <string name="app_icon_description_string">App Icon</string>
    <string name="back_button_description_string">Back Button</string>
    <string name="sign_up_title_string">Sign Up</string>
    <string name="name_title_String">Name</string>
    <string name="first_name_placeholder_string">First Name</string>
    <string name="last_name_placeholder_string">Last Name</string>
    <string name="email_title_string">Email</string>
    <string name="email_id_placeholder_string">Email</string>
    <string name="create_password_title_string">Create Password</string>
    <string name="new_password_placeholder_string">New Password</string>
    <string name="confirm_password_placeholder_string">Confirm Password</string>
    <string name="id_number_title_string">Unique ID Number</string>
    <string name="id_number_placeholder_string">ID Number eg. (XX00X1234)</string>
    <string name="short_password_error">Password should comprise of 8 characters</string>
    <string name="date_format_placeholder_string">DD/MM/YYYY</string>
    <string name="date_of_birth_title_string">Date of Birth:</string>
    <string name="phone_number_title_string">Phone Number</string>
    <string name="teacher_name_placeholder_string">Rudi Fernandes</string>
    <string name="home_nav_title">Home</string>
    <string name="schedule_nav_title">Schedule</string>
    <string name="settings_nav_title">Settings</string>
    <string name="dashboard_nav_title">Dashboard</string>
    <string name="password_title_string">Password</string>
    <string name="create_account_title_string">Sign Up</string>
    <string name="reset_password_title_string">Reset Password</string>
    <string name="Login_title_string">Login</string>
    <string name="institute_title_string">Instute Name</string>
    <string name="assign_teachers_info_string">you have to assign a subject to a teacher, one teacher can teach multiple subjects in this case the second subject of the teacher will be considered as a substitute</string>
    <string name="manage_hours_title">Manage Hours</string>
    <string name="android_appCompat_packageInfo_package_name_type">com.extremex.{AppContext.packageInfo.pName}</string>
    <string name="name_placeholder_string">Full name</string>
    <string name="institute_code_title_string">Institute Code</string>
    <string name="institute_code_string">Institute Code</string>
    <string name="elective_subject_title_string">Elective subject:</string>
    <string name="subject_title_string">Subject:</string>
    <string name="add_button_string_title">Add</string>
    <string name="manage_subject_title_string">Manage subject</string>
    <string name="view_all_subjects_title_string">View all Subjects</string>
    <string name="add_subjects_title_string">Add a subject</string>
    <string name="subject_name_title_staring">Subject Name</string>
    <string name="add_elective_subjects_title_string">Add elective subject</string>
    <string name="_divider_">Just a Divirer</string>
    <string name="_share_button_">Share button</string>

</resources>