<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".common.fragment.LoginFragment"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/LoginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@drawable/tv_background"
        android:elevation="5dp"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_icon_description_string"
                android:cropToPadding="true"
                android:src="@drawable/ic_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1.0"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/Login_title_string"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/tv_background_inner"
                android:scrollbars="none">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:text="@string/email_title_string"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/EmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints="EmailID"
                        android:hint="@string/email_id_placeholder_string"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textIsSelectable="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/password_title_string"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:autofillHints="Password"
                        android:hint="@string/password_title_string"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textIsSelectable="true" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/CreateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:backgroundTint="?colorPrimaryContainer"
                    android:textColor="?android:textColor"
                    app:strokeColor="?colorPrimary"
                    app:strokeWidth="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/create_account_title_string" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ResetButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:backgroundTint="?colorPrimaryContainer"
                    android:textColor="?android:textColor"
                    app:strokeColor="?colorPrimary"
                    app:strokeWidth="3dp"
                    app:iconGravity="textStart"
                    android:maxLines="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/reset_password_title_string" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_login_button"
        android:text="@string/Login_title_string" />
</RelativeLayout>