<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.fragment.SignUpFragment">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_gravity="top"
    android:gravity="top"
    android:background="@drawable/tv_background"
    android:elevation="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="0dp"

    android:orientation="vertical">

        <ImageView
            android:id="@+id/BackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/back_button_description_string"
            android:padding="20dp"
            android:src="@drawable/ic_arrow_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="5dp"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_icon_description_string"
                android:cropToPadding="true"
                android:src="@drawable/ic_signup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1.0"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/sign_up_title_string"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@drawable/tv_background_inner"
                android:layout_gravity="bottom"
                android:scrollbars="none">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:text="@string/name_title_String"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="20dp">

                        <EditText
                            android:id="@+id/FirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="FirstName"
                            android:hint="@string/first_name_placeholder_string"
                            android:inputType="textPersonName"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textIsSelectable="true" />

                        <EditText
                            android:id="@+id/LastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="LastName"
                            android:hint="@string/last_name_placeholder_string"
                            android:inputType="textPersonName"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textIsSelectable="true" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="20dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeTextType="uniform"
                            android:text="@string/date_of_birth_title_string"
                            android:textIsSelectable="false"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/DobSetter"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="2"
                            android:background="@drawable/bg_stroke_primary"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/date_format_placeholder_string"
                            android:textSize="14sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/phone_number_title_string"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="20dp">

                        <EditText
                            android:id="@+id/PhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="Numbers"
                            android:hint="@string/phone_number_title_string"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textIsSelectable="true" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:text="@string/email_title_string"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/EmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints="EmailID"
                        android:hint="@string/email_id_placeholder_string"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textIsSelectable="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/create_password_title_string"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="20dp">

                        <EditText
                            android:id="@+id/NewPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="Password"
                            android:hint="@string/new_password_placeholder_string"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textIsSelectable="true" />

                        <EditText
                            android:id="@+id/ConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="Password"
                            android:hint="@string/confirm_password_placeholder_string"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textIsSelectable="true" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:gravity="center"
                        android:background="@drawable/tv_background_2"
                        android:elevation="5dp"
                        android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:textSize="14sp"
                            android:fontFamily="@font/b_bold"
                            android:text="Join an existing room"/>

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/roomInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00000000"
                            android:scaleX="0.7"
                            android:scaleY="0.7"
                            android:alpha="0.7"
                            android:src="@drawable/ic_info"/>


                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/JoinRoomCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                        <EditText
                            android:id="@+id/roomCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="room code provided by your admin"
                            android:visibility="gone"
                            android:inputType="numberDecimal"
                            android:maxLength="8"
                            android:maxLines="1"
                            android:textIsSelectable="true" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/InstuteTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:text="@string/instute_title_string"
                        android:textIsSelectable="false"
                        android:textStyle="bold"
                        android:visibility="visible"/>

                    <EditText
                        android:id="@+id/InstuteName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints="name"
                        android:hint="@string/instute_title_string"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textIsSelectable="true"
                        android:visibility="visible" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                android:text="By signing up you except our terms of use."
                android:textAllCaps="false"
                android:textStyle="normal" />

        </LinearLayout>

</RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="673dp"
        android:text="@string/sign_up_title_string" />



</androidx.appcompat.widget.LinearLayoutCompat>